feat: add conversation persistence, Neo4j integration, and market basics schema
Implement durable conversation history with PostgreSQL adapter and Redis/optional storage. Add Neo4j configuration and graph adapter. Add conversation controller and lifecycle management. Add market basics DB schema (futures, wealth products, enterprises). Add Neo4j service to docker-compose. Refactor ResearchAgentController. Rename sessionId to sessionKey. Add UUID Type Handler, audit sink, and update tests.